[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptalgs"
version = "0.1.0"
description = "Educational implementations of cryptographic algorithms and supporting math."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "tinterer" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["cryptalgs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
